--- a/logs.html
+++ b/logs.html
@@ -57,6 +57,9 @@
             var speed = 55;
             var element = document.getElementById('typing-text');
             var inputBox;
+            var keyClickSound = new Audio('https://github.com/theRavenWatches/theRavenWatches.github.io/raw/main/audio/log_keyboardclick.mp3');
+            var beepSound = new Audio('https://github.com/theRavenWatches/theRavenWatches.github.io/raw/main/audio/log_successfulcommand.mp3');
+            
             function typeWriter() {
                 if (index < typingText.length) {
                     element.textContent += typingText.charAt(index);
@@ -70,12 +73,18 @@
                 element.innerHTML += '<br><span>~</span> <input type="text" class="typable-box" placeholder="" id="inputBox">';
                 inputBox = document.getElementById('inputBox');
                 inputBox.addEventListener('keydown', handleKeyDown);
-            }
+                document.addEventListener('keydown', function(event) {
+                keyClickSound.currentTime = 0;
+                keyClickSound.play();
+                    });
+                }
             function handleKeyDown(event) {
                 if (event.key === 'Enter') {
                     var inputValue = inputBox.value.trim().toLowerCase();
                     var response = getResponse(inputValue);
                     updateResponse(inputValue, response);
+                    beepSound.currentTime = 0;
+                    beepSound.play();
                 }
             }
             function getResponse(inputValue) {
@@ -138,5 +147,6 @@
 </head>
 <body>
     <div id="typing-text" class="typing-text"></div>
+
 </body>
 </html>
