Patch Notes update (hopefully no syntax errors with the brackets)

--- a/main-story.html
+++ b/main-story.html
@@ -253,10 +253,10 @@
     </div>
 
     <div id="textSection" class="text-section">
-        <h1>PATCH NOTES 0.1</h1>
-        <p>Added background music and background image to Story Contents. Looks a lot cleaner, no?<br><br>Added Patch Notes to Story Contents<br><br>Added Important Info dropdown menu's to Story Contents, effectively rendering the existence of the Information page useless, as it is now bundled with Story Contents<br><br>Added bobbing effect to the Open Terminal button<br><br>Website is now in beta testing!</p>
-        <h2>Upcoming Update 0.2</h2>
-        <p2>Background for Index page<br><br>HOPEFULLY a new Terminal update.<br><br>Cleaner looking Index page.<br><br>Background music compatibility for browsers with media autoplay disabled<br><br>Hopefully better mobile support<br><br>MAYBE a custom font.</p2>
+        <h1>PATCH NOTES 0.2</h1>
+        <p>Updated Main Page to look a lot nicer (now with even more spook!)<br><br>Added keyboard clicking and confirm beeping sound to Terminal</p>
+        <h2>Upcoming Update 0.3</h2>
+        <p2>For sure new terminal update<br><br>Cleaning up some internal code (if I'm not lazy)<br><br>Finally do a 1.0 update as I'm basically done with sprucing up the actual site<br><br>Addition of a 'help' command for the sake of documenting all commands (there's already a lot of them)</p2>
         <button class="back-btn" onclick="toggleText()">Back</button>
     </div>
 
