Patch Notes Update
No syntax errors but I added a line break so the back button would stop hugging the last line of text

--- a/main-story.html
+++ b/main-story.html
@@ -256,7 +256,7 @@
         <h1>PATCH NOTES 0.2</h1>
         <p>Updated Main Page to look a lot nicer (now with even more spook!)<br><br>Added keyboard clicking and confirm beeping sound to Terminal</p>
         <h2>Upcoming Update 0.3</h2>
-        <p2>For sure new terminal update<br><br>Cleaning up some internal code (if I'm not lazy)<br><br>Finally do a 1.0 update as I'm basically done with sprucing up the actual site<br><br>Addition of a 'help' command for the sake of documenting all commands (there's already a lot of them)</p2>
+        <p2>For sure new terminal update<br><br>Cleaning up some internal code (if I'm not lazy)<br><br>Finally do a 1.0 update as I'm basically done with sprucing up the actual site<br><br>Addition of a 'help' command for the sake of documenting all commands (there's already a lot of them)<br><br></p2>
         <button class="back-btn" onclick="toggleText()">Back</button>
     </div>
 
