--- a/main-story.html
+++ b/main-story.html
@@ -277,10 +277,10 @@
     </div>
 
     <div id="textSection" class="text-section">
-        <h1>PATCH NOTES 0.2</h1>
-        <p>Updated Main Page to look a lot nicer (now with even more spook!)<br><br>Added keyboard clicking and confirm beeping sound to Terminal</p>
-        <h2>Upcoming Update 0.3</h2>
-        <p2>For sure new terminal update<br><br>Cleaning up some internal code (if I'm not lazy)<br><br>Finally do a 1.0 update as I'm basically done with sprucing up the actual site<br><br>Addition of a 'help' command for the sake of documenting all commands (there's already a lot of them)<br><br></p2>
+        <h1>PATCH NOTES 0.2.1</h1>
+        <p>Updated Main Page to look a lot nicer (now with even more spook!)<br><br>Added keyboard clicking and confirm beeping sound to Terminal<br><br>Background buzzing for Terminal page<br><br>'help' and 'list.file' commands added to be more user friendly to new updates (also so I don't have to post everything here)</p>
+        <h2>Upcoming Update 1.0</h2>
+        <p2>For sure new terminal update<br><br>Cleaning up some internal code (if I'm not lazy)<br><br>Finally do a 1.0 update as I'm basically done with sprucing up the actual site<br><br></p2>
         <button class="back-btn" onclick="toggleText()">Back</button>
     </div>
 
